--- a/index.html
+++ b/index.html
@@ -11,64 +11,43 @@
 
 <body>
     <main class="container">
-        <h1>Intro to float</h1>
+        <h1>Guru float</h1>
 
-        <section class="section-left borderc clearfix">
-            <h2>Float left</h2>
-            <img class="fleft section-img" src="./img/image1.svg" alt="prima immagine">
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut officia alias assumenda neque tempore
-                    maxime iure dicta laborum aut non inventore tempora cum, nobis corporis facilis laboriosam fuga
-                    minus? Dolore!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut officia alias assumenda neque tempore
-                    maxime iure dicta laborum aut non inventore tempora cum, nobis corporis facilis laboriosam fuga
-                    minus? Dolore!</p>
+        <section class="section-columns clearfix">
+            <div class="fleft box">
+                <img class=" section-img" src="./img/image1.svg" alt="prima immagine">
+                <h3>UNO</h3>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut officia alias assumenda neque tempore
+                        maxime!</p>
+                </div>
             </div>
-            <!-- <div style="clear: both;"></div> -->
+            <div class="fleft box">
+                <img class=" section-img" src="./img/image1.svg" alt="prima immagine">
+                <h3>DUE</h3>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut officia alias assumenda neque tempore
+                        maxime iure dicta laborum aut non inventore tempora cum, nobis corporis facilis laboriosam fuga
+                        minus? Dolore!</p>
+                </div>
+            </div>
+            <div class="fleft box">
+                <img class=" section-img" src="./img/image1.svg" alt="prima immagine">
+                <h3>TRE</h3>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut officia alias assumenda neque tempore
+                        maxime iure dicta laborum aut non inventore tempora cum, nobis corporis facilis laboriosam fuga
+                        minus? Dolore!</p>
+                </div>
+            </div>
         </section>
-        <section class="section-right">
+        <section class="section-text">
             <h2>Float right</h2>
-            <img class="fright section-img" src="./img/image1.svg" alt="prima immagine">
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut officia alias assumenda neque tempore
-                    maxime iure dicta laborum aut non inventore tempora cum, nobis corporis facilis laboriosam fuga
-                    minus? Dolore!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut officia alias assumenda neque tempore
-                    maxime iure dicta laborum aut non inventore tempora cum, nobis corporis facilis laboriosam fuga
-                    minus? Dolore!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut officia alias assumenda neque tempore
-                    maxime iure dicta laborum aut non inventore tempora cum, nobis corporis facilis laboriosam fuga
-                    minus? Dolore!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut officia alias assumenda neque tempore
-                    maxime iure dicta laborum aut non inventore tempora cum, nobis corporis facilis laboriosam fuga
-                    minus? Dolore!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut officia alias assumenda neque tempore
-                    maxime iure dicta laborum aut non inventore tempora cum, nobis corporis facilis laboriosam fuga
-                    minus? Dolore!</p>
-            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut officia alias assumenda neque tempore
+                maxime iure dicta laborum aut non inventore tempora cum, nobis corporis facilis laboriosam fuga
+                minus? Dolore!</p>
         </section>
 
-        <section class="section-clearfix clearfix">
-            <h2>Float clearfix</h2>
-            <img class="fleft section-img" src="./img/image1.svg" alt="prima immagine">
-            <section>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut officia alias assumenda neque tempore
-                    maxime iure dicta laborum aut non inventore tempora cum, nobis corporis facilis laboriosam fuga
-                    minus? Dolore!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut officia alias assumenda neque tempore
-                    maxime iure dicta laborum aut non inventore tempora cum, nobis corporis facilis laboriosam fuga
-                    minus? Dolore!</p>
-            </section>
-            <section>
-                <h2>Float clearfix</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut officia alias assumenda neque tempore
-                    maxime iure dicta laborum aut non inventore tempora cum, nobis corporis facilis laboriosam fuga
-                    minus? Dolore!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut officia alias assumenda neque tempore
-                    maxime iure dicta laborum aut non inventore tempora cum, nobis corporis facilis laboriosam fuga
-                    minus? Dolore!</p>
-            </section>
-        </section>
     </main>
 </body>
 
