--- a/index.html
+++ b/index.html
@@ -6,49 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Float</title>
+    <title>FLEXBOX</title>
 </head>
 
 <body>
-    <main class="container">
-        <h1>Guru float</h1>
-
-        <section class="section-columns clearfix">
-            <div class="fleft box">
-                <img class=" section-img" src="./img/image1.svg" alt="prima immagine">
-                <h3>UNO</h3>
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut officia alias assumenda neque tempore
-                        maxime!</p>
-                </div>
-            </div>
-            <div class="fleft box">
-                <img class=" section-img" src="./img/image1.svg" alt="prima immagine">
-                <h3>DUE</h3>
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut officia alias assumenda neque tempore
-                        maxime iure dicta laborum aut non inventore tempora cum, nobis corporis facilis laboriosam fuga
-                        minus? Dolore!</p>
-                </div>
-            </div>
-            <div class="fleft box">
-                <img class=" section-img" src="./img/image1.svg" alt="prima immagine">
-                <h3>TRE</h3>
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut officia alias assumenda neque tempore
-                        maxime iure dicta laborum aut non inventore tempora cum, nobis corporis facilis laboriosam fuga
-                        minus? Dolore!</p>
-                </div>
-            </div>
-        </section>
-        <section class="section-text">
-            <h2>Float right</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut officia alias assumenda neque tempore
-                maxime iure dicta laborum aut non inventore tempora cum, nobis corporis facilis laboriosam fuga
-                minus? Dolore!</p>
-        </section>
-
-    </main>
+    <div class="container bg2">
+        <div class="bg3 logo">Logo</div>
+        <div class="bg1 menu">
+            <div>item1</div>
+            <div>item1</div>
+            <div>item1</div>
+            <div>item1</div>
+            <div>item1</div>
+            <div>item1</div>
+            <div>item1</div>
+            <div>item1</div>
+        </div>
+    </div>
 </body>
 
 </html>
