--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
 </head>
 
 <body>
-    <div class="container bg2">
-        <div class="bg3 logo">Logo</div>
-        <div class="bg1 menu">
-            <div>item1</div>
-            <div>item1</div>
-            <div>item1</div>
-            <div>item1</div>
-            <div>item1</div>
-            <div>item1</div>
-            <div>item1</div>
-            <div>item1</div>
+    <header>
+        <div class="container head-content">header</div>
+    </header>
+    <main>
+        <div class="container main-content">
+            <div class="colsx">sx</div>
+            <div class="coldx">dx</div>
         </div>
-    </div>
+    </main>
+    <footer>
+        <div class="container footer-content">footer</div>
+    </footer>
 </body>
 
 </html>
