--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </header>
     <main>
         <div class="container main-content">
+            <div class="colssx">dx</div>
             <div class="colsx">sx</div>
             <div class="coldx">dx</div>
         </div>
