responsive-layout-box-stefano

--- a/index.html
+++ b/index.html
@@ -5,24 +5,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>FLEXBOX</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <header>
-        <div class="container head-content">header</div>
+    <header class="site-header p-fix">
+        <div class="container d-flex f-ai-c f-jc-b">
+            <div class="logo">
+                <img src="./img/boolean-logo.png" alt="">
+            </div>
+            <div class="navigation">
+                <div class="hamburger">
+                    Hamburger
+                </div> 
+                <nav class="menu">
+                    <ul>
+                        <li><a href="">voce menu</a></li>
+                        <li>voce menu</li>
+                        <li>voce menu</li>
+                        <li>voce menu</li>
+                        <li>voce menu</li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </header>
-    <main>
-        <div class="container main-content">
-            <div class="colssx">dx</div>
-            <div class="colsx">sx</div>
-            <div class="coldx">dx</div>
+
+    <main class="site-main">
+        <div class="container d-flex f-wrap">
+            <div class="box size-2x d-flex">
+                <div class="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quidem dolorum nihil sunt error omnis fugit, dolorem totam, dignissimos voluptatum illo aliquam natus tenetur optio vitae dolor? Placeat, numquam libero.</div>
+                <div class="box">immagine</div>
+            </div>
+            <div class="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quidem dolorum nihil sunt error omnis fugit, dolorem totam, dignissimos voluptatum illo aliquam natus tenetur optio vitae dolor? Placeat, numquam libero.</div>
+            <div class="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quidem dolorum nihil sunt error omnis fugit, dolorem totam, dignissimos voluptatum illo aliquam natus tenetur optio vitae dolor? Placeat, numquam libero.</div>
+            <div class="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quidem dolorum nihil sunt error omnis fugit, dolorem totam, dignissimos voluptatum illo aliquam natus tenetur optio vitae dolor? Placeat, numquam libero.</div>
+            <div class="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos quidem dolorum nihil sunt error omnis fugit, dolorem totam, dignissimos voluptatum illo aliquam natus tenetur optio vitae dolor? Placeat, numquam libero.</div>
         </div>
     </main>
-    <footer>
-        <div class="container footer-content">footer</div>
-    </footer>
 </body>
 
 </html>
