12 bool resp xs md

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 </head>
 
 <body>
-    
+    <div class="container">
+        <div class="row center">
+            <div class="col">col</div>
+            <div class="col">col</div>
+            <div class="col">come mi posiziono</div>
+            <div class="col">spaziato?</div>
+            <div class="col">col</div>
+        </div>
+    </div>
 </body>
 
 </html>
