12 bool flex start

--- a/index.html
+++ b/index.html
@@ -11,13 +11,21 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row center">
-            <div class="col">col</div>
-            <div class="col">col</div>
-            <div class="col">come mi posiziono</div>
-            <div class="col">spaziato?</div>
-            <div class="col">col</div>
+            <div class="col-12 col-md-6">
+                <div class="row p-3">
+                    <div class="bg-active col-6 col-md-2">sad</div>
+                    <div class="bg-active col-6 col-md-2">das</div>
+                    <div class="bg-active col-12 col-md-8">das</div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="row  p-3">
+                    <div class="bg-active col-12 col-md-6">asdf</div>
+                    <div class="bg-active col-12 col-md-6">sdf</div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
